--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h1 {
   margin-top: 1rem;
 }
 
-p {
+p, ul {
   margin: 1rem 0;
 }
 
@@ -79,6 +79,7 @@ blockquote::after {
 
 figcaption {
   font-size: 80%;
+  margin: 0.5rem 0;
 }
 
 figcaption::before {
